[package]
name = "gel-o"
version = "0.0.3"
authors = ["Max Blachman <blachmanmax@gmail.com>"]
description = "Run a closure on Linux InputEvents"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maxbla/gel-o"
readme = "README.md"

[lib]
name = "gelo"
path = "src/lib.rs"

[dependencies]
evdev-rs = "0.4.0"
epoll = "4.1.0"
inotify = {version = "0.8.2", default-features=false}

[badges]
maintenance = { status = "experimental" }