[package]
name = "gel-o"
version = "0.0.4"
authors = ["Max Blachman <blachmanmax@gmail.com>"]
description = "Run a closure on Linux InputEvents"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maxbla/gel-o"
readme = "README.md"

[features]
arc = []
serde = ["evdev-rs/serde"]

[lib]
name = "gelo"
path = "src/lib.rs"

[dependencies]
evdev-rs = {git="https://github.com/ndesh26/evdev-rs.git"}
libc = "0.2.82"
epoll = "4.1.0"
inotify = {version = "0.8.2", default-features=false}

[dev-dependencies]
serde_json="1.0.61"

[badges]
maintenance = { status = "experimental" }